リドゥ機能を実装

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
   <div class="header">
     <div class="top-left-align">
       <button id="resetButton" class="header-btn"><i class="fas fa-trash"></i></button>
-      <button id="undoButton" class="header-btn"><i class="fas fa-history"></i></button>
+      <button id="undoButton" class="header-btn"><i class="fa-solid fa-arrow-rotate-left"></i></button>
+      <button id="redoButton" class="header-btn"><i class="fas fa-redo"></i></button>
       <button id="shareButton" class="header-btn" title="シェア"><i class="fas fa-share-alt"></i></button>
     </div>
     <div class="title">NEKO-KAN</div>
